<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pujolsluis.android.singlescreenapp.MainActivity">

    <TextView
        android:text="@string/bussines_name_sevendips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView_BussinesName"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_BussinesLogo"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <ImageView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/imageView_BussinesLogo"
        android:background="@drawable/sevendipslogo"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:layout_height="200dp" />

    <TextView
        android:text="@string/bussines_type_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_TypeOfBussines"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_BussinesName"
        app:layout_constraintLeft_toLeftOf="@+id/textView_BussinesName"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:text="@string/bussines_description_sevendips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/TextView_DescriptionOfRestaurant"
        app:layout_constraintLeft_toLeftOf="@+id/textView_TypeOfBussines"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_TypeOfBussines"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textAlignment="viewStart"
        android:fontFamily="sans-serif-medium"
        android:elegantTextHeight="false"
        android:editable="false"
        android:duplicateParentState="false"
        android:fadeScrollbars="false"
        android:phoneNumber="false"
        android:textAllCaps="false"
        android:textIsSelectable="false"
        android:breakStrategy="balanced"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@android:drawable/ic_menu_call"
        android:id="@+id/imageView2"
        android:cropToPadding="false"
        app:layout_constraintLeft_toLeftOf="@+id/TextView_DescriptionOfRestaurant"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:text="@string/bussines_phone_sevendips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:srcCompat="@android:drawable/ic_dialog_map"
        android:id="@+id/imageView3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintLeft_toLeftOf="@+id/TextView_DescriptionOfRestaurant"
        android:layout_marginStart="8dp" />

    <TextView
        android:text="@string/bussines_address_sevendips"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        android:layout_width="250dp" />

    <ImageView
        app:srcCompat="@android:drawable/ic_lock_idle_alarm"
        android:id="@+id/imageView4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="24dp" />

    <TextView
        android:text="@string/bussines_working_hours_sevendips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp" />

</android.support.constraint.ConstraintLayout>
